<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="score_text">Score:</string>
    <string name="score_value_number">Score_value</string>
    <string name="times_played">Times Played:</string>
    <string name="times_value_number">Time_Value</string>


    <string name="question_australia">Constantinople is the largest city in Turkey.</string>
    <string name="question_oceans">The Pacific Ocean is larger than
        the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
        and the Indian Ocean.</string>
    <string name="question_africa">Ghana is known as the largest micro-continent </string>
    <string name="question_australia_season">Australia experiences the season of summer
        in December.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
        freshwater lake.</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="title_activity_cheat">Activity Cheat</string>
    <string name="next_button">Next</string>
</resources>